--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 *, *::before, *::after{
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: Gotham Rounded, sans-serif;
   font-weight: normal;
 }
@@ -7,25 +9,38 @@
 body{
   padding: 0;
   margin: 0;
-  background: linear-gradient(to right, #001e55, #02a2be);
+  background: linear-gradient(to right, #023ca7, #03afce);
   color: #ffff;
 }
 
+h1{
+  font-weight: bold;
+}
+
 form{
-  display: flex;
-  justify-content: center;
+  width: 100%;
 }
 
 input{
-  padding: 6px;
+  padding: 10px;
   border-radius: 5px;
-  font-size: 20px;
+  border: none;
+  outline: 1px solid #03afce;
+  font-size: 18px;
+  width: 100%;
 }
+/* 
+input:focus{
+  outline: 1px solid #023ca7;
+} */
 
 .main{
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
+  margin-top: 30px;
+  gap: 1rem;
 }
 
 .title{
@@ -33,11 +48,16 @@ input{
 }
 
 .todos{
-  display: grid;
-  gap: 5px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  /* justify-content: center; */
   align-items: center;
-  margin-top: 3rem;
+  width: 100%;
+  max-height: 300px;
+  margin-top: 10px;
+  overflow-y: auto;
+  padding: 10px;
 }
 
 .todo{
@@ -45,11 +65,74 @@ input{
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #fff;
-  border-radius: 10px;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 5px;
   color: #000;
+  width: 100%;
+  box-shadow: 0 5px 10px #b9b9b9;
 }
 
 .todo span{
   padding-right: 1rem;
+}
+
+.actions{
+  display: flex;
+  gap: 3px;
+}
+
+.btn{
+  padding: 5px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.toggle-btn{
+  background: #03afce;
+  color: #fff;
+}
+
+.delete-btn{
+  background: #ff1f1f;
+  color: #fff;
+}
+
+.main-todo-container{
+  display: grid;
+  padding: 1.5rem;
+  background: #ffff;
+  border-radius: 3px;
+  width: 400px;
+  color: #000;
+  gap: 10px;
+  max-height: 450px;
+}
+.inner-title{
+  font-size: 24px;
+}
+
+.input-container{
+  position: relative;
+  display: flex;
+}
+
+.plus-icon{
+  position: absolute;
+  right: 0;
+  outline: none;
+  border: none;
+  color: #fff;
+  background: #03afce;
+  padding: 10px;
+  height: 100%;
+  width: 40px;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
